--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#FFEB3B">
 
     <EditText
         android:id="@+id/et_username"
@@ -12,6 +13,7 @@
         android:hint="Fname"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textColorHint="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +26,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColorHint="#E91E63"
         app:layout_constraintEnd_toEndOf="@+id/et_Lname1"
         app:layout_constraintStart_toStartOf="@+id/et_Lname1"
         app:layout_constraintTop_toBottomOf="@+id/et_Lname1" />
@@ -37,6 +40,7 @@
         android:hint="Phone"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#E91E63"
         app:layout_constraintEnd_toEndOf="@+id/et_password1"
         app:layout_constraintStart_toStartOf="@+id/et_password1"
         app:layout_constraintTop_toBottomOf="@+id/et_password1" />
@@ -50,7 +54,7 @@
         android:background="#2196F3"
 
         android:text="Update"
-        android:textColor="#212121"
+        android:textColor="#FF5722"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_EmailAddress1" />
@@ -64,6 +68,7 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textColorHint="#E91E63"
         app:layout_constraintBottom_toTopOf="@+id/bt_update1"
         app:layout_constraintEnd_toEndOf="@+id/et_Phone1"
         app:layout_constraintStart_toStartOf="@+id/et_Phone1"
@@ -77,6 +82,7 @@
         android:hint="Lname"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#E91E63"
         app:layout_constraintEnd_toEndOf="@+id/et_username"
         app:layout_constraintStart_toStartOf="@+id/et_username"
         app:layout_constraintTop_toBottomOf="@+id/et_username" />
